--- a/deployment.yml
+++ b/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: app
-        image: ""
+        image: "markwu100/k8scicd"
         resources:
           requests:
             cpu: 10m
